[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Poker game backend"
authors = ["Domceee <118061793+Domceee@users.noreply.github.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
psycopg = {version = "^3.2", extras = ["binary"]}
pydantic = "^2.11.7"
pokerkit = "^0.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

